# egui-desktop

./: Cargo.toml
src/menu/: api.rs  menu_bar.rs
src/titlebar/: render_bar.rs
src/utils/: os.rs  resize_handles.rs  rounded_corners.rs
