[package]
name = "egui-desktop"
version = "0.2.0"
edition = "2024"
description = "Cross-platform desktop UI components for egui applications"
license = "MIT"
repository = "https://github.com/PxlSyl/egui-desktop"
readme = "README.md"
homepage = "https://github.com/PxlSyl/egui-desktop"
documentation = "https://docs.rs/egui-desktop"
keywords = ["egui", "desktop", "gui", "widgets", "ui"]
categories = ["gui", "graphics"]
exclude = ["target/*", "**/target/*", "**/.github/*", "**/.vscode/*", "**/.idea/*", "**/node_modules/*", "**/bin/*", "**/sea-package/*"]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "-Dwarnings",
    "-Wmissing-docs",
    "-Wrustdoc::broken_intra_doc_links",
    "-Wrustdoc::private_intra_doc_links",
]

[dependencies]
egui = "0.33.2"
eframe = "0.33.2"

egui_extras = { version = "0.33.2", features = ["all_loaders"] }
raw-window-handle = "0.6"
lazy_static = "1.4"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"

# Platform-specific dependencies for native rounded corners
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16

[dev-dependencies]
